# diamond-dev

./: .gitignore  .semgrep.yml  AGENTS.md  README.md  diamond-dev  pyproject.toml
.agents/skills/sonarqube-analysis/: SKILL.md
.agents/skills/sonarqube-analysis/scripts/: sonar_report.py
.github/workflows/: ci.yml  publish.yml
diamond_dev/: __init__.py  acceptance.py  agents.py  commands.py  commit_pair.py  comparison_bundle.py  config.py  config_init.py  errors.py  executor.py  git_ops.py  logging_setup.py  main.py  markdown.py  naming.py  notify.py  orchestrator.py  orchestrator_acceptance.py  orchestrator_agents.py  orchestrator_comparison.py  orchestrator_pull_request.py  orchestrator_repositories.py  orchestrator_review.py  path_safety.py  pr.py  preflight.py  providers.py  report.py  review_judgments.py  workflow.py
docs/: README.md  acceptance-and-review.md  agents.md  architecture.md  automation-and-ci.md  configuration.md  custom-prompts.md  observability.md  repositories-and-resume.md  troubleshooting.md  two-commit-mode.md
tests/: test_acceptance.py  test_agents.py  test_ci_workflows.py  test_commands.py  test_commit_pair.py  test_comparison_bundle.py  test_config.py  test_config_init.py  test_coverage_regressions.py  test_executor.py  test_git_ops.py  test_logging.py  test_main.py  test_naming.py  test_notify.py  test_orchestrator.py  test_orchestrator_e2e.py  test_path_safety.py  test_pr.py  test_preflight.py  test_providers.py  test_review_judgments.py  test_workflow.py
