[project]
name = "diamond-dev"
version = "0.1.0"
description = "Coordinate multi-agent implementation workflows from markdown plans."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "Harold Martin", email = "harold.martin@gmail.com" },
]
keywords = ["ai-agents", "automation", "cli", "code-review", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
]
dependencies = [
    "loguru>=0.7.3",
]

[project.urls]
Homepage = "https://github.com/hbmartin/diamond-dev"
Issues = "https://github.com/hbmartin/diamond-dev/issues"
Repository = "https://github.com/hbmartin/diamond-dev"

[project.scripts]
diamond-dev = "diamond_dev.main:main"

[dependency-groups]
dev = [
    "lizard>=1.23.0",
    "pylint>=4.0.5",
    "pyrefly>=1.0.0",
    "pyroma>=5.0.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""
source-exclude = ["**/.DS_Store"]
wheel-exclude = ["**/.mypy_cache", "**/.DS_Store"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["ANN204", "B013", "D107", "D203", "D213", "EM101", "EM102", "PLR2004", "TC003", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN001", "ANN002", "ANN201", "D100", "D102", "D103", "D400", "D415", "E501", "F401", "FBT003", "INP001", "PLC0415", "PLR0913", "PLR2004", "PT006", "PT009", "PT027", "S101", "SIM115", "TRY003"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[tool.pylint.main]
fail-on = [
    "C0203",
    "E0203",
    "E0701",
    "R0401",
    "R0801",
    "R0901",
    "W0201",
    "W0237",
    "W0631",
    "W0641",
    "W1114",
    "W1509",
    "W3101",
    "W4901",
    "W4902",
    "W4905",
]

[tool.pylint."messages control"]
disable = ["R0903", "R0913"]

[tool.pylint.format]
max-module-lines = 500
